switching to lap before pwr cut

--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -41,7 +41,7 @@
 
     </div>
     <div id="contentDiv" class="content">
-        <div class="catTwo" style="display: block;" id="Homediv">
+        <div class="catTwo" style="display: none;" id="Homediv">
             <div class="tileHolder">
                 <div class="homeTile">
                     <div class="tileinner" style="background-image: url('src/appointments.png');"></div>
@@ -216,7 +216,7 @@
             </div>
 
         </div>
-        <div class="catTwo" style="display: none;" id="Manage Patientdiv">
+        <div class="catTwo" style="display: block;" id="Manage Patientdiv">
             <div class="tileHolder2">
                 <div class="homeTile TileCenter" id="addPatientOpenbtn" onclick="windowManager('addPatientWindowPop')">
                     <p class="TileText">Add Patient</p>
@@ -308,7 +308,7 @@
                 </div>
             </div>
             <div class="staffList" style="display: block;">
-                <table border="0" class="appointmentsTable">
+                <table border="1" class="appointmentsTable2">
 
                     <tr>
                         <th>
@@ -316,124 +316,61 @@
                         </th>
                     </tr>
                     <tr>
-                        <th>Name</th>
-                        <th>Patient ID</th>
+                        <th style="width: 30%;">Name</th>
+                        <th style="width: 10%;">Patient ID</th>
                         <th>Assigned Doctor</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                 </table>
-                <table border="0" class="appointmentsTable">
+                <table border="1" class="appointmentsTable">
                     <tr>
-                        <td>
+                        <td style="width: 30%;">
                             <img src="src/userimage.png" alt="" class="patientImg">
                             <p>Saveen Malinga</p>
                         </td>
-                        <td>
+                        <td style="width: 10%;">
                             <p>69 </p>
                         </td>
                         <td>
                             <p>Doctor</p>
                         </td>
+                        <td style="width: 40%;"><input type="button" value="update">
+                            <input type="button" value="add prescription"></td>
                     </tr>
                 </table>
-                <table border="0" class="appointmentsTable">
+                <table border="1" class="appointmentsTable">
                     <tr>
-                        <td>
+                        <td style="width: 30%;">
                             <img src="src/userimage.png" alt="" class="patientImg">
                             <p>Dinithi Abeysuriya</p>
                         </td>
-                        <td>
+                        <td style="width: 10%;">
                             <p>420 </p>
                         </td>
                         <td>
                             <p>Nurse</p>
                         </td>
+                        <td style="width: 40%;"><input type="button" value="update">
+                            <input type="button" value="add prescription"></td>
                     </tr>
                 </table>
-                <table border="0" class="appointmentsTable">
+                <table border="1" class="appointmentsTable">
                     <tr>
-                        <td>
+                        <td style="width: 30%;">
                             <img src="src/userimage.png" alt="" class="patientImg">
                             <p>Dilasha Thraindi</p>
                         </td>
-                        <td>
+                        <td style="width: 10%;">
                             <p>120</p>
                         </td>
                         <td>
                             <p>Nurse</p>
                         </td>
+                        <td style="width: 40%;"><input type="button" value="update">
+                            <input type="button" value="add prescription"></td>
                     </tr>
                 </table>
-                <table border="0" class="appointmentsTable">
-                    <tr>
-                        <td>
-                            <img src="src/userimage.png" alt="" class="patientImg">
-                            <p>Dilasha Thraindi</p>
-                        </td>
-                        <td>
-                            <p>120</p>
-                        </td>
-                        <td>
-                            <p>Nurse</p>
-                        </td>
-                    </tr>
-                </table>
-                <table border="0" class="appointmentsTable">
-                    <tr>
-                        <td>
-                            <img src="src/userimage.png" alt="" class="patientImg">
-                            <p>Dilasha Thraindi</p>
-                        </td>
-                        <td>
-                            <p>120</p>
-                        </td>
-                        <td>
-                            <p>Nurse</p>
-                        </td>
-                    </tr>
-                </table>
-                <table border="0" class="appointmentsTable">
-                    <tr>
-                        <td>
-                            <img src="src/userimage.png" alt="" class="patientImg">
-                            <p>Dilasha Thraindi</p>
-                        </td>
-                        <td>
-                            <p>120</p>
-                        </td>
-                        <td>
-                            <p>Nurse</p>
-                        </td>
-                    </tr>
-                </table>
-                <table border="0" class="appointmentsTable">
-                    <tr>
-                        <td>
-                            <img src="src/userimage.png" alt="" class="patientImg">
-                            <p>Dilasha Thraindi</p>
-                        </td>
-                        <td>
-                            <p>120</p>
-                        </td>
-                        <td>
-                            <p>Nurse</p>
-                        </td>
-                    </tr>
-                </table>
-                <table border="0" class="appointmentsTable">
-                    <tr>
-                        <td>
-                            <img src="src/userimage.png" alt="" class="patientImg">
-                            <p>Dilasha Thraindi</p>
-                        </td>
-                        <td>
-                            <p>120</p>
-                        </td>
-                        <td>
-                            <p>Nurse</p>
-                        </td>
-                    </tr>
-                </table>
-
             </div>
         </div>
         <div class="catTwo" style="display: none;" id="Manage Staffdiv">
